images behave predictably with sizing, fixed expert tag overflow

--- a/src/app/static/question/question.component.css
+++ b/src/app/static/question/question.component.css
@@ -21,12 +21,25 @@ p{
   flex-direction: column;
   align-items: flex-end;
 }
-/* mat-chip {
-  font-size: 0.75em;
-} */
-img{
-  max-width: 300px;
+/* Small Images */
+.false{
+  max-width: 60%;
+  max-height: 200px;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border: 1.5px solid #868e93;
+  border-radius: 2px;
+}
+/* Full Size Images */
+.true{
+  max-width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1.5px solid #868e93;
+  border-radius: 2px;
+}
+.mat-chip.mat-standard-chip.mat-chip-selected.mat-primary {
+  background-color: #55698d;
 }
